--- a/packages/bedroom.yaml
+++ b/packages/bedroom.yaml
@@ -32,7 +32,46 @@ climate:
     target_sensor: sensor.bedroom_temperature
     initial_hvac_mode: "off"
 
+fan:
+  - platform: mqtt
+    name: "Bedroom Fan"
+    command_topic: "Bedroom_Fan/cmnd/FanSpeed"
+    speed_command_topic: "Bedroom_Fan/cmnd/FanSpeed"
+    state_topic: "Bedroom_Fan/stat/RESULT"
+    speed_state_topic: "Bedroom_Fan/stat/RESULT"
+    state_value_template: >
+      {% if value_json.FanSpeed is defined %}
+        {% if value_json.FanSpeed == 0 -%}0{%- elif value_json.FanSpeed > 0 -%}4{%- endif %}
+      {% else %}
+        {% if states.fan.Bedroom_Fan.state == 'off' -%}0{%- elif states.fan.Bedroom_Fan.state == 'on' -%}4{%- endif %}
+      {% endif %}
+    speed_value_template: "{{ value_json.FanSpeed }}"
+    availability_topic: Bedroom_Fan/tele/LWT
+    payload_off: "0"
+    payload_on: "4"
+    payload_low_speed: "1"
+    payload_medium_speed: "2"
+    payload_high_speed: "3"
+    payload_available: Online
+    payload_not_available: Offline
+    speeds:
+      - off
+      - low
+      - medium
+      - high
+
 automation:
+  - alias: Main Bedroom - fan button
+    trigger:
+      - platform: state
+        entity_id: binary_sensor.bedroom_fan_button1
+        to: 'on'
+    condition: []
+    action:
+      service: fan.set_speed
+      entity_id: fan.bedroom_fan
+      data_template:
+        speed: "{% if is_state('fan.bedroom_fan', 'off') %}low{% else %}false{% endif %}"
   - id: kids_lights
     alias: Main bedroom - Kid indicator
     trigger:
