--- a/packages/livingroom.yaml
+++ b/packages/livingroom.yaml
@@ -141,6 +141,7 @@ automation:
       - entity_id: binary_sensor.ac_active_sensor_contact
         platform: state 
         to: "off"
+        for: "00:00:05"
     condition: []
     action:
       - entity_id: climate.living_room
