--- a/google.yaml
+++ b/google.yaml
@@ -1,5 +1,8 @@
 project_id: homeassistant-234121
-api_key: !secret google_api_key
+service_account:
+  private_key: !secret google_private_key
+  client_email: !secret google_client_email
+report_state: true
 exposed_domains:
   - switch
   - light
@@ -13,14 +16,6 @@ entity_config:
   script.arriving_home:
     expose: true
   climate.living_room:
-    expose: true
-  climate.office:
-    expose: true
-  climate.main_bedroom:
-    expose: true
-  climate.lucas_bedroom:
-    expose: true
-  climate.xander_bedroom:
     expose: true
   scene.all_off:
     expose: true
@@ -62,15 +57,13 @@ entity_config:
     expose: true
   light.xander_lights:
     expose: true
-  switch.power2:
-    expose: true
-  fan.kitchen_fan:
-    expose: true
   light.toilet:
     expose: true
   light.laundry_toilet:
     expose: true
   light.laundry:
+    expose: true
+  switch.power2:
     expose: true
   switch.powerboard_outlet_1:
     expose: true
@@ -79,4 +72,26 @@ entity_config:
   switch.powerboard_outlet_3:
     expose: true  
   switch.powerboard_outlet_4:
+    expose: true
+  fan.office_fan:
+    expose: true
+  fan.bedroom_fan:
+    expose: true
+  fan.kitchen_fan:
+    expose: true
+  fan.xander_fan:
+    expose: true
+  sensor.xander_bedroom_sensor_temperature:
+    expose: true
+  sensor.backroom_sensor_temperature:
+    expose: true
+  sensor.bedroom_temperature:
+    expose: true
+  sensor.carport_temperature:
+    expose: true
+  sensor.lucas_bedroom_sensor_temperature:
+    expose: true
+  sensor.office_temperature:
+    expose: true
+  sensor.netatmo_outdoor_temperature:
     expose: true
