--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ home-assistant_v2.db-shm
 www/zigbee2mqtt_networkmap/source.js
 www/images/sydneyradar.gif
 www/community/zigbee2mqtt_networkmap/source.js
+www/camera-snapshots/carport.jpg
