--- a/esphome/hallway.yaml
+++ b/esphome/hallway.yaml
@@ -17,6 +17,7 @@ mqtt:
   broker: 192.168.86.2
   username: !secret mqtt_username
   password: !secret mqtt_password
+  discovery: false
 
 ota:
 
@@ -56,12 +57,6 @@ binary_sensor:
       number: GPIO5
       inverted: True
     name: "Hallway Switch2"
-    on_press:
-      then:
-        - switch.turn_on: relay1
-        - mqtt.publish:
-            topic: Hallbulb/cmnd/Backlog
-            payload: "White 30; Dimmer 30; POWER ON"
   - platform: gpio
     pin:
       number: GPIO4
