--- a/esphome/entry.yaml
+++ b/esphome/entry.yaml
@@ -1,25 +1,7 @@
-esphome:
-  name: entry
-  platform: ESP8266
-  board: esp01_1m
-
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-
-# Enable logging
-logger:
-
-# Enable Home Assistant API
-api:
-
-mqtt:
-  broker: 192.168.86.2
-  username: !secret mqtt_username
-  password: !secret mqtt_password
-  discovery: false
-
-ota:
+substitutions:
+  device: entry
+  
+<<: !include common/common.yaml
 
 switch:
   - platform: gpio
