--- a/packages/kitchen.yaml
+++ b/packages/kitchen.yaml
@@ -4,7 +4,6 @@ light:
     entities:
       - light.kitchen_back
       - light.kitchen_front
-      - light.kitchen_strip
 
 switch:
   - platform: template
@@ -14,12 +13,18 @@ switch:
         friendly_name: "Kitchen"
         value_template: "{{ states('light.kitchen_lights') }}"
         turn_on:
-          service: light.turn_on
-          data:
+          - service: light.turn_on
+            data:
               entity_id: light.kitchen_lights
               brightness_pct: 100
               transition: 1
               color_temp: 420
+          - service: light.turn_on
+            data:
+              entity_id: light.kitchen_strip
+              brightness_pct: 100
+              transition: 1
+              color_name: white
         turn_off:
           service: light.turn_off
           data:
@@ -64,6 +69,12 @@ automation:
       - service: light.turn_on
         data:
           entity_id: light.kitchen_lights
+          transition: 1
+          brightness_pct: 50
+          color_name: blue
+      - service: light.turn_on
+        data:
+          entity_id: light.kitchen_strip
           transition: 1
           brightness_pct: 50
           color_name: blue
