--- a/automation/presence.yaml
+++ b/automation/presence.yaml
@@ -28,14 +28,14 @@
   action:
     - service: switch.toggle
       entity_id: switch.backroom_ptz_home
-    - service: light.turn_on
-      entity_id: light.family_room_strip
-      data:
-        effect: Rainbow
-    - service: light.turn_on
-      entity_id: light.tv_backlight
-      data:
-        effect: Random Twinkle
+    # - service: light.turn_on
+    #   entity_id: light.family_room_strip
+    #   data:
+    #     effect: Rainbow
+    # - service: light.turn_on
+    #   entity_id: light.tv_backlight
+    #   data:
+    #     effect: Random Twinkle
     - service: notify.hangout_notify
       data:
         message: "Yay - Mel's home"
@@ -48,14 +48,14 @@
   action:
     - service: switch.toggle
       entity_id: switch.backroom_ptz_home
-    - service: light.turn_on
-      entity_id: light.family_room_strip
-      data:
-        effect: Rainbow
-    - service: light.turn_on
-      entity_id: light.tv_backlight
-      data:
-        effect: Random Twinkle
+    # - service: light.turn_on
+    #   entity_id: light.family_room_strip
+    #   data:
+    #     effect: Rainbow
+    # - service: light.turn_on
+    #   entity_id: light.tv_backlight
+    #   data:
+    #     effect: Random Twinkle
     - service: notify.hangout_notify
       data:
         message: "Yay - you're home"
