--- a/groups.yaml
+++ b/groups.yaml
@@ -18,6 +18,7 @@ all_light_relays:
     - switch.office_relay_1
     - switch.xander_relay_1
     - switch.xander_relay_2
+    - switch.tv_power
 all_lights:
   name: All Lights
   entities:
