--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -1,16 +1,3 @@
-cch:
-  exceptions:
-  - conditions:
-      user: Mel
-    config:
-      disable_sidebar: true
-      menu: show
-      notifications: show
-      options: show
-      voice: hide
-  swipe: true
-  swipe_animate: swipe
-  voice: hide
 custom_header:
   chevrons: false
   compact_mode: true
@@ -22,171 +9,20 @@ custom_header:
       hide_tabs: 7,8
       options_hide: true
   voice_hide: true
-resources:
-- type: module
-  url: /local/floorplan/floorplan-card.js
-- type: module
-  url: /community_plugin/lovelace-slider-entity-row/slider-entity-row.js
-- type: module
-  url: /community_plugin/light-entity-row/light-entity-row.js
-- type: module
-  url: /community_plugin/lovelace-auto-entities/auto-entities.js
-- type: module
-  url: /community_plugin/simple-thermostat/simple-thermostat.js
-- type: module
-  url: /community_plugin/button-card/button-card.js
-- type: module
-  url: /community_plugin/lovelace-fold-entity-row/fold-entity-row.js
-- type: module
-  url: /community_plugin/bom-weather-card/bom-weather-card.js
-- type: module
-  url: /community_plugin/rgb-light-card/card.js
-- type: js
-  url: /community_plugin/favicon-counter/favicon-counter.js
-- type: module
-  url: /community_plugin/mini-graph-card/mini-graph-card-bundle.js
-- type: module
-  url: /community_plugin/mini-media-player/mini-media-player-bundle.js
-- type: module
-  url: /community_plugin/lovelace-more-info-card/more-info-card.js
-- type: module
-  url: /community_plugin/custom-header/custom-header.js
-- type: js
-  url: /community_plugin/fan-control-entity-row/fan-control-entity-row.js
-- type: module
-  url: /community_plugin/lovelace-thermostat-card/thermostat-card.js
 title: Home
 views:
 - badges: []
   cards:
-  - config:
-      image: /local/floorplan/Floorplan-image.svg
-      log_level: error
-      rules:
-      - entities:
-        - fan.bedroom_fan
-        - fan.office_fan
-        - fan.kitchen_fan
-        - fan.xander_fan
-        propagate: false
-        states:
-        - class: light-on
-          state: 'on'
-      - entities:
-        - climate.living_room
-        entity: climate.living_room
-        states:
-        - class: ac-dry
-          state: dry
-        - class: ac-heat_cool
-          state: heat_cool
-        - class: ac-heat
-          state: heat
-        - class: ac-fan_only
-          state: fan_only
-        - class: ac-cool
-          state: cool
-        - class: ac-off
-          state: 'off'
-      - entities:
-        - input_select.livingroom_ac_state
-        entity: input_select.livingroom_ac_state
-        text_template: ${entity.state}
-      - action:
-          data:
-            entity_id: input_select.livingroom_preset
-            option: Night
-          service: input_select.select_option
-        entities:
-        - light.livingroom_lights
-        entity: light.livingroom_lights
-        states:
-        - class: livingroom-off
-          state: 'off'
-        - class: livingroom-on
-          state: 'on'
-      - action: null
-        entities:
-        - input_select.livingroom_preset
-        entity: input_select.livingroom_preset
-        propagate: false
-        states:
-        - class: preset-normal
-          state: Normal
-        - class: preset-night
-          state: Night
-        - class: preset-off
-          state: TurnOff
-      - entities:
-        - binary_sensor.bedroom_window_sensor_contact
-        - binary_sensor.backdoor_sensor_contact
-        - binary_sensor.frontdoor_sensor_contact
-        - binary_sensor.livingroom_window_sensor_contact
-        - binary_sensor.pantry_sensor_contact
-        states:
-        - class: sensor-open
-          state: 'on'
-        - class: sensor-closed
-          state: 'off'
-      - entities:
-        - person.chris
-        - person.mel
-        text_template: ${entity.state}
-      - entities:
-        - camera.backyard
-        - camera.livingroom
-        - camera.carport
-        - camera.backroom
-        states:
-        - class: camera-idle
-          state: idle
-      - action:
-          service: homeassistant.toggle
-        entities:
-        - light.bedroom_lights
-        - light.office_lights
-        - switch.livingroom_lights
-        - light.lucas_lights
-        - light.xander_lights
-        - light.craftroom_lights
-        - light.hall_lights
-        - light.entry_lights
-        - light.kitchen_lights
-        - light.backroom_lights
-        - light.laundry
-        - light.laundry_toilet
-        - light.backyard_lights
-        - light.toilet
-        - light.carport_lights
-        - light.bathroom_lights
-        states:
-        - class: light-off
-          state: 'off'
-        - class: light-off
-          state: unknown
-        - class: light-on
-          state: 'on'
-      - entities:
-        - sensor.xander_bedroom_sensor_temperature
-        - sensor.office_temperature
-        - sensor.backroom_sensor_temperature
-        - sensor.carport_temperature
-        - sensor.netatmo_indoor_temperature
-        - sensor.netatmo_outdoor_temperature
-        - sensor.office_temperature
-        - sensor.bedroom_temperature
-        - sensor.lucas_bedroom_sensor_temperature
-        text_template: "${Math.round(entity.state*10)/10}\xB0"
-      - entities:
-        - sensor.netatmo_netatmo_rainy_sum_rain_24
-        text_template: ${entity.state}mm
-      stylesheet: /local/floorplan/Floorplan-image.css?v=1
-      svg: {}
+  - config: /local/floorplan/Floorplan.yaml
     type: custom:floorplan-card
   icon: mdi:home
   id: system
   panel: false
   title: Floorplan
+  visible:
+  - user: 78554c5a47cd465b8f4689851629b80f
+  - user: 6fd087c7c9e74322b7c54c88566cda0a
+  - user: 47c95d2b4100460597954951fb807e4a
 - badges: []
   cards:
   - entity: climate.living_room
@@ -201,25 +37,22 @@ views:
     type: thermostat
   icon: mdi:air-conditioner
   title: ''
+  visible:
+  - user: 78554c5a47cd465b8f4689851629b80f
+  - user: 6fd087c7c9e74322b7c54c88566cda0a
+  - user: 47c95d2b4100460597954951fb807e4a
 - badges: []
   cards:
   - entities:
     - entity: light.livingroom_lights
       name: Livingroom
       type: custom:slider-entity-row
-    - colors:
-      - entity_id: scene.normal
-        icon_color: white
-        type: scene
-      - entity_id: scene.night
-        icon_color: blue
-        type: scene
-      - entity_id: scene.turn_off
-        icon_color: black
-        type: scene
-      entity: light.livingroom_lights
-      justify: center
-      type: custom:rgb-light-card
+    - buttons:
+      - scene.turn_off
+      - scene.night
+      - scene.party
+      - scene.normal
+      type: custom:paper-buttons-row
     - entity: light.bedroom_lights
       name: Main Bedroom
       type: custom:slider-entity-row
@@ -251,35 +84,81 @@ views:
     title: Rooms
     type: entities
   - entities:
+    - light.tv_backlight
     - buttons:
       - name: Random Colours
-        service_data:
-          effect: Slow Random Effect
+        tap_action:
+          action: call-service
+          service: light.turn_on
+          service_data:
+            effect: Slow Random Effect
+            entity_id: light.tv_backlight
       - name: Twinkle
-        service_data:
-          effect: Random Twinkle
+        tap_action:
+          action: call-service
+          service: light.turn_on
+          service_data:
+            effect: Random Twinkle
+            entity_id: light.tv_backlight
       - name: Rainbow
-        service_data:
-          effect: Rainbow
-      entity: light.tv_backlight
-      hideBrightness: true
-      hideColorTemp: true
-      showColorSliders: false
-      type: custom:light-entity-row
+        tap_action:
+          action: call-service
+          entity: light.tv_backlight
+          service: light.turn_on
+          service_data:
+            effect: Rainbow
+            entity_id: light.tv_backlight
+      type: custom:paper-buttons-row
+    - entity: light.family_room_strip
     - buttons:
       - name: Random Colours
-        service_data:
-          effect: Slow Random Effect
+        tap_action:
+          action: call-service
+          service: light.turn_on
+          service_data:
+            effect: Slow Random Effect
+            entity_id: light.family_room_strip
       - name: Twinkle
-        service_data:
-          effect: Random Twinkle
+        tap_action:
+          action: call-service
+          service: light.turn_on
+          service_data:
+            effect: Random Twinkle
+            entity_id: light.family_room_strip
       - name: Rainbow
-        service_data:
-          effect: Rainbow
-      entity: light.family_room_strip
-      hideBrightness: true
-      hideColorTemp: true
-      type: custom:light-entity-row
+        tap_action:
+          action: call-service
+          entity: light.tv_backlight
+          service: light.turn_on
+          service_data:
+            effect: Rainbow
+            entity_id: light.family_room_strip
+      type: custom:paper-buttons-row
+    - entity: light.kitchen_strip
+    - buttons:
+      - name: Random Colours
+        tap_action:
+          action: call-service
+          service: light.turn_on
+          service_data:
+            effect: Slow Random Effect
+            entity_id: light.kitchen_strip
+      - name: Twinkle
+        tap_action:
+          action: call-service
+          service: light.turn_on
+          service_data:
+            effect: Random Twinkle
+            entity_id: light.kitchen_strip
+      - name: Rainbow
+        tap_action:
+          action: call-service
+          entity: light.tv_backlight
+          service: light.turn_on
+          service_data:
+            effect: Rainbow
+            entity_id: light.kitchen_strip
+      type: custom:paper-buttons-row
     show_header_toggle: false
     title: Light Strips
     type: entities
@@ -294,6 +173,10 @@ views:
   icon: mdi:lightbulb
   panel: false
   title: Lights
+  visible:
+  - user: 78554c5a47cd465b8f4689851629b80f
+  - user: 6fd087c7c9e74322b7c54c88566cda0a
+  - user: 47c95d2b4100460597954951fb807e4a
 - badges: []
   cards:
   - entity_apparent_temp: sensor.bom_gosford_feels_like_c
@@ -388,6 +271,7 @@ views:
     - entity: sensor.backroom_sensor_humidity
     - entity: sensor.xander_bedroom_sensor_humidity
     - entity: sensor.carport_sensor_humidity
+    - entity: sensor.bathroom_humidity
     hours_to_show: 72
     refresh_interval: 0
     type: history-graph
@@ -407,6 +291,10 @@ views:
   icon: mdi:cloud
   panel: false
   title: Charts
+  visible:
+  - user: 78554c5a47cd465b8f4689851629b80f
+  - user: 6fd087c7c9e74322b7c54c88566cda0a
+  - user: 47c95d2b4100460597954951fb807e4a
 - badges: []
   cards:
   - aspect_ratio: 0%
@@ -430,8 +318,14 @@ views:
     type: picture-glance
   icon: mdi:camera
   title: Cameras
+  visible:
+  - user: 78554c5a47cd465b8f4689851629b80f
+  - user: 6fd087c7c9e74322b7c54c88566cda0a
+  - user: 47c95d2b4100460597954951fb807e4a
 - badges: []
   cards:
+  - entity: media_player.receiver
+    type: media-control
   - entity: media_player.living_room_tv_2
     hide:
       mute: true
@@ -464,12 +358,17 @@ views:
       hide:
         controls: true
       type: custom:mini-media-player
-    - entity: media_player.googlehome2690
+    - entity: media_player.living_room_speaker
       group: true
       hide:
         controls: true
       type: custom:mini-media-player
     - entity: media_player.living_room_mini
+      group: true
+      hide:
+        controls: true
+      type: custom:mini-media-player
+    - entity: media_player.bedroom_speaker
       group: true
       hide:
         controls: true
@@ -481,6 +380,8 @@ views:
     type: custom:mini-media-player
   icon: mdi:movie
   title: Media
+  visible:
+  - user: 78554c5a47cd465b8f4689851629b80f
 - badges: []
   cards:
   - dark_mode: false
@@ -498,11 +399,14 @@ views:
   icon: mdi:map
   panel: true
   title: Map
+  visible:
+  - user: 78554c5a47cd465b8f4689851629b80f
 - badges: []
   cards:
   - card:
+      show_header_toggle: false
       title: Notices
-      type: glance
+      type: entities
     filter:
       exclude:
       - domain: device_tracker
@@ -512,6 +416,7 @@ views:
         entity_id: sensor.*linkquality
       - attributes:
           battery: < 50
+      - state: unavailable
     type: custom:auto-entities
   - entities:
     - entity: group.all_light_relays
@@ -539,8 +444,6 @@ views:
     hours: 48
     type: custom:auto-entities
   - entities:
-    - entity: sensor.tv_power_watts
-    - entity: sensor.washing_watts
     - entity: sensor.house_power
     hours_to_show: 24
     refresh_interval: 0
@@ -559,39 +462,7 @@ views:
     - sensor.disk_free
     title: System Stats
     type: history-graph
-  - entities:
-    - hide_if_unavailable: false
-      name: Main
-      type: cast
-      view: '0'
-    - hide_if_unavailable: false
-      name: Weather
-      type: cast
-      view: 1
-    - hide_if_unavailable: false
-      name: Lights
-      type: cast
-      view: 2
-    - hide_if_unavailable: false
-      name: Cameras
-      type: cast
-      view: 3
-    - hide_if_unavailable: false
-      name: Media
-      type: cast
-      view: 4
-    - hide_if_unavailable: false
-      name: Map
-      type: cast
-      view: 5
-    - hide_if_unavailable: false
-      name: Advanced
-      type: cast
-      view: 6
-    type: entities
-  - entities: []
-    hours_to_show: 24
-    refresh_interval: 0
-    type: history-graph
   icon: mdi:settings
   title: ''
+  visible:
+  - user: 78554c5a47cd465b8f4689851629b80f
