--- a/esphome/backyardcam.yaml
+++ b/esphome/backyardcam.yaml
@@ -1,17 +1,7 @@
-esphome:
-  name: christmastree
-  platform: ESP8266
-  board: esp01_1m
-  
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
+substitutions:
+  device: backyardcam
 
-api:
-
-logger:
-
-ota:
+<<: !include common/common.yaml
 
 binary_sensor:
   - platform: gpio
@@ -19,13 +9,13 @@ binary_sensor:
       number: GPIO0
       mode: INPUT_PULLUP
       inverted: True
-    name: "Christmas Tree Button"
+    name: "Backyard cam Button"
     on_press:
       - switch.toggle: relay
 
 switch:
   - platform: gpio
-    name: "Christmas Tree"
+    name: "Backyard Cam"
     pin: GPIO12
     id: relay
     inverted: no
