--- a/esphome/powerboard.yaml
+++ b/esphome/powerboard.yaml
@@ -1,19 +1,11 @@
-esphome:
-  name: powerboard
-  platform: ESP8266
+substitutions:
+  device: powerboard
   board: esp01_1m
+  
+<<: !include common/common.yaml
 
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-
-# Enable logging
-logger:
-
-# Enable Home Assistant API
-api:
-
-ota:
+web_server:
+  port: 80
 
 switch:
   - platform: gpio
