--- a/esphome/powerboard2.yaml
+++ b/esphome/powerboard2.yaml
@@ -1,20 +1,12 @@
-esphome:
-  name: powerboard2
-  platform: ESP8266
+substitutions:
+  device: powerboard2
   board: esp01_1m
+  
+<<: !include common/common.yaml
 
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-
-# Enable logging
-logger:
-
-# Enable Home Assistant API
-api:
-
-ota:
-
+web_server:
+  port: 80
+  
 switch:
   - platform: gpio
     name: "Powerboard2 Outlet 1"
