--- a/packages/carport.yaml
+++ b/packages/carport.yaml
@@ -7,8 +7,9 @@ light:
 camera:
   - platform: generic
     name: carport
-    still_image_url: https://home.adebenham.com/int/motion/picture/1/current/
-    stream_source: rtsp://admin:542285@192.168.86.42/live/profile.0
+    still_image_url: https://home.adebenham.com/int/motion/picture/2/current/
+    #stream_source: rtsp://admin:542285@192.168.86.42/live/profile.0
+    stream_source: rtsp://192.168.86.188/live/profile.0
 
 binary_sensor:
   - platform: mqtt
