--- a/packages/office.yaml
+++ b/packages/office.yaml
@@ -95,6 +95,11 @@ automation:
         data:
           entity_id: light.office_strip
           effect: Rainbow
+      - service: light.turn_on
+        entity_id: light.office_shelf
+        data:
+          entity_id: light.office_shelf
+          effect: Rainbow
   - alias: Office - Switch 2
     trigger:
       - entity_id: binary_sensor.office_switch2
@@ -132,3 +137,5 @@ automation:
         data:
           entity_id: light.office_strip
           effect: Random Twinkle
+      - service: light.turn_off
+        entity_id: light.office_shelf
