--- a/esphome/officeesp.yaml
+++ b/esphome/officeesp.yaml
@@ -42,3 +42,17 @@ light:
           update_interval: 5s
       - addressable_rainbow:
       - addressable_random_twinkle:
+      - addressable_color_wipe:
+      - addressable_color_wipe:
+          name: Color Wipe Effect With Custom Values
+          colors:
+            - red: 100%
+              green: 100%
+              blue: 100%
+              num_leds: 1
+            - red: 0%
+              green: 0%
+              blue: 0%
+              num_leds: 1
+          add_led_interval: 100ms
+          reverse: False
