--- a/esphome/officestrip.yaml
+++ b/esphome/officestrip.yaml
@@ -1,19 +1,8 @@
-esphome:
-  name: officestrip
-  platform: ESP8266
+substitutions:
+  device: officestrip
   board: d1_mini
 
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-
-# Enable logging
-logger:
-
-# Enable Home Assistant API
-api:
-
-ota:
+<<: !include common/common.yaml
 
 light:
   - platform: fastled_clockless
@@ -33,3 +22,26 @@ light:
           update_interval: 5s
       - addressable_rainbow:
       - addressable_random_twinkle:
+      - addressable_color_wipe:
+      - strobe:
+      - strobe:
+          name: Fast Strobe
+          colors:
+            - state: True
+              duration: 25ms
+            - state: False
+              duration: 25ms
+      - addressable_flicker:
+      - addressable_color_wipe:
+          name: Color Wipe Effect With Custom Values
+          colors:
+            - red: 50%
+              green: 0%
+              blue: 0%
+              num_leds: 2
+            - red: 0%
+              green: 0%
+              blue: 50%
+              num_leds: 2
+          add_led_interval: 100ms
+          reverse: False
